2001-07-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el: Bind `:bool' for old Emacsen.

2001-07-10  Shun-ichi GOTO  <gotoh@taiyo.co.jp>

	* w3m.el (w3m-parse-attributes): Support :bool type attribute.

	* w3m-form.el (w3m-form-parse-region): Use :bool type for SELECTED
	attribute of OPTION tag.

2001-07-09  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-form.el (w3m-form-make-form-urlencoded): If second value of plist
	is consp, use car value (for select).
	(w3m-form-parse-region): Don't parse type attribute for textarea;
	Process select.
	(w3m-fontify-forms): Save value and name for submit.
	(w3m-form-replace): Added optional argument `invisible'.
	(w3m-form-input): Process SELECT and PASSWORD.
	(w3m-form-input-select-buffer-lines): New user option.
	(w3m-form-input-select-mode-hook): Ditto.
	(w3m-form-input-select-set-hook): Ditto.
	(w3m-form-input-select-keymap): New keymap.
	(w3m-form-input-select-buffer): New buffer local variable.
	(w3m-form-input-select-form): Ditto.
	(w3m-form-input-select-name): Ditto.
	(w3m-form-input-select-point): Ditto.
	(w3m-form-input-select-candidates): Ditto.
	(w3m-form-input-select-set): New function.
	(w3m-form-input-select-mode): Ditto.
	(w3m-form-input-select): Ditto.
	(w3m-form-submit): Added optional argument name and value.

	* shimbun/sb-airs.el (shimbun-airs-coding-system): Removed.
	* shimbun/sb-asahi-html.el (shimbun-asahi-html-coding-system): Ditto.
	* shimbun/sb-asahi.el (shimbun-asahi-coding-system): Ditto.
	* shimbun/sb-bbdb-ml.el (shimbun-bbdb-ml-coding-system): Ditto.
	* shimbun/sb-cnet.el (shimbun-cnet-coding-system): Ditto.
	* shimbun/sb-h14m.el (shimbun-h14m-coding-system): Ditto.
	* shimbun/sb-impress.el (shimbun-impress-coding-system): Ditto.
	(shimbun-impress-groups-alist): Removed jijinews, sports.
	* shimbun/sb-linuxce-jp.el (shimbun-linuxce-jp-coding-system): Ditto.
	* shimbun/sb-meadow.el (shimbun-meadow-coding-system): Ditto.
	* shimbun/sb-mew.el (shimbun-mew-coding-system): Ditto.